--- a/site/Coursera/module2/module2.html
+++ b/site/Coursera/module2/module2.html
@@ -13,12 +13,12 @@
 
 		<div class="col-lg-3">
 
-			<div class="menuTitle meunTitle1">
+			<div class="menuTitle menuTitle1">
 					<h3>Chicken</h3>
 
 			</div>
  		
- 		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+ 		<p class="menuText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,  </p>
 
 
@@ -26,11 +26,11 @@
 
 <div class="col-lg-3">
 
-			<div class="menuTitle">
-					Beef
+			<div class="menuTitle menuTitle2">
+					<h3>Beef</h3>
 
 			</div>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<p class="menuText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,  </p>
 
 
@@ -39,11 +39,11 @@
 
 <div class="col-lg-3">
 
-			<div class="menuTitle">
-					Sushi
+			<div class="menuTitle menuTitle3">
+					<h3>Sushi</h3>
 
 			</div>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<p class="menuText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,  </p>
 
 
