--- a/site/Coursera/module2/module2.html
+++ b/site/Coursera/module2/module2.html
@@ -11,7 +11,7 @@
 	
 	<div class= "row">
 
-		<div class="col-lg-3">
+		<div class="col-lg-3 col-md-2 col-sm-1">
 
 			<div class="menuTitle menuTitle1">
 					<h3>Chicken</h3>
@@ -24,7 +24,7 @@
 
 		</div>
 
-<div class="col-lg-3">
+<div class="col-lg-3 col-md-2 col-sm-1">
 
 			<div class="menuTitle menuTitle2">
 					<h3>Beef</h3>
@@ -37,7 +37,7 @@
 		</div>
 
 
-<div class="col-lg-3">
+<div class="col-lg-3 col-md-1 col-sm-1">
 
 			<div class="menuTitle menuTitle3">
 					<h3>Sushi</h3>
